--- a/index.html
+++ b/index.html
@@ -285,10 +285,12 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <iframe src="https://angel10arcila.github.io/rifas/" width="400px" height="1200px" frameborder="0"></iframe>
 </center>
 <br>
- <center>
- <iframe src="https://angel10arcila.github.io/fast11return/" width="400px" height="1200px" frameborder="0">
- <iframe src="https://angel10arcila.github.io/venearci_group/" width="400px" height="1200px" frameborder="0">
- </center>
+
+<br>
+<center>
+<iframe src="https://angel10arcila.github.io/fast11return/" width="400px" height="1200px" frameborder="0"></iframe>
+<iframe src="https://angel10arcila.github.io/venearci_group/" width="400px" height="1200px" frameborder="0"></iframe>
+</center>
 <br>
 <center>
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4nbcupGU0nqmpJSLgKlUR3R7SgmtBeAyOUC-UPy5M7edq8OxwWWBPOYJwH8sMUMP7pth0v0dm06CBS_rmR47MiPmmTVdp4IBGFiPkfuLSDA5_hoTJoquBR8_0j6NQUgmKgrRDNyxC3TsTmYIPxLj3ldpAvxPJ8tsT2d3wUPc8LcLQ4Z5Cf3lUP_unmqWC/s1600/venearci.png" width="20%" height="20%">
